Remove List.of syntax